# docs/swagger.yaml
@@ -1,26 +1,17 @@
 basePath: /
 definitions:
-  create_movie_handler.message:
+  login_request.Request:
     properties:
-      message:
+      password:
+        minLength: 8
         type: string
-    type: object
-  delete_movie_handler.message:
-    properties:
-      message:
+      username:
         type: string
+    required:
+    - password
+    - username
     type: object
-  get_movie_handler.message:
-    properties:
-      message:
-        type: string
-    type: object
-  login_handler.message:
-    properties:
-      message:
-        type: string
-    type: object
-  mark_as_watched_handler.message:
+  message.Msg:
     properties:
       message:
         type: string
@@ -37,11 +28,6 @@ definitions:
         type: boolean
       year:
         type: integer
-    type: object
-  register_handler.message:
-    properties:
-      message:
-        type: string
     type: object
   requests.CreateMovieRequest:
     properties:
@@ -71,7 +57,6 @@ definitions:
       username:
         type: string
     required:
-    - firstname
     - password
     - username
     type: object
@@ -99,7 +84,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/user_request.UserRequest'
+          $ref: '#/definitions/login_request.Request'
       produces:
       - application/json
       responses:
@@ -108,11 +93,11 @@ paths:
         "400":
           description: Invalid login credentials
           schema:
-            $ref: '#/definitions/login_handler.message'
+            $ref: '#/definitions/message.Msg'
         "422":
           description: Validation failed
           schema:
-            $ref: '#/definitions/login_handler.message'
+            $ref: '#/definitions/message.Msg'
       summary: Login user
       tags:
       - users
@@ -138,7 +123,7 @@ paths:
         "422":
           description: Validation failed
           schema:
-            $ref: '#/definitions/create_movie_handler.message'
+            $ref: '#/definitions/message.Msg'
       summary: Create movie
       tags:
       - movies
@@ -161,7 +146,7 @@ paths:
         "400":
           description: Invalid Object ID
           schema:
-            $ref: '#/definitions/delete_movie_handler.message'
+            $ref: '#/definitions/message.Msg'
       summary: Delete movie
       tags:
       - movies
@@ -187,7 +172,7 @@ paths:
         "400":
           description: Invalid object ID
           schema:
-            $ref: '#/definitions/get_movie_handler.message'
+            $ref: '#/definitions/message.Msg'
       summary: Get movie
       tags:
       - movies
@@ -209,7 +194,7 @@ paths:
         "400":
           description: Invalid Object ID
           schema:
-            $ref: '#/definitions/mark_as_watched_handler.message'
+            $ref: '#/definitions/message.Msg'
       summary: Update movie
       tags:
       - movies
@@ -250,7 +235,7 @@ paths:
         "422":
           description: Validation failed
           schema:
-            $ref: '#/definitions/register_handler.message'
+            $ref: '#/definitions/message.Msg'
       summary: Register user
       tags:
       - users
