# pkg/requests/login_request/login.go
@@ -1,0 +1,6 @@
+package login_request
+
+type Request struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required,gte=8"`
+}
